--- a/lib/dune
+++ b/lib/dune
@@ -1,2 +1,8 @@
 (library
- (name eehs))
+ (name eehs)
+ (public_name eehs)
+ (libraries unix)
+ (foreign_stubs
+  (language c)
+  (flags :standard "-D_GNU_SOURCE")
+  (names epoll_stubs)))
