--- a/eehs.opam
+++ b/eehs.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.4"}
+  "optint"
   "odoc" {with-doc}
 ]
 build: [
