--- a/uring/Makefile
+++ b/uring/Makefile
@@ -1,9 +1,12 @@
-LIBURING = -luring
-EXE = cat
-CFLAGS = -std=c2x -Wall -pedantic ${LIBURING}
+EXE = cat echo
+CFLAGS = -std=c2x -W -Wall -Wextra -pedantic -luring -g \
+				 -DDEBUG -fno-omit-frame-pointer -Wno-pointer-arith
 RM = rm -f
 
 all: ${EXE}
+
+release: CFLAGS += -g3 -Werror
+release: ${EXE}
 
 clean:
 	${RM} ${EXE} *.o
