uring: fix echo receive

--- a/uring/Makefile
+++ b/uring/Makefile
@@ -1,11 +1,13 @@
-EXE = cat echo
-CFLAGS = -std=c2x -W -Wall -Wextra -pedantic -luring -g \
-				 -DDEBUG -fno-omit-frame-pointer -Wno-pointer-arith
+EXE = cat echo shift
+CFLAGS = -std=c2x -W -Wall -Wextra -luring -g -O0 \
+				 -DDEBUG -fno-omit-frame-pointer -Wno-pointer-arith \
+				 -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0
+
 RM = rm -f
 
 all: ${EXE}
 
-release: CFLAGS += -g3 -Werror
+release: CFLAGS += -O3 -Werror
 release: ${EXE}
 
 clean:
