uring: undef _FORTIFY_SOURCE

--- a/uring/Makefile
+++ b/uring/Makefile
@@ -1,7 +1,6 @@
 EXE = cat echo shift
 CFLAGS = -std=c2x -W -Wall -Wextra -luring -g -O0 \
-				 -DDEBUG -fno-omit-frame-pointer -Wno-pointer-arith \
-				 -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=0
+				 -DDEBUG -fno-omit-frame-pointer -Wno-pointer-arith
 
 RM = rm -f
 
